--- a/Luxo/Luxo.vcxproj.filters
+++ b/Luxo/Luxo.vcxproj.filters
@@ -1,42 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Luxo">
+      <UniqueIdentifier>{EDBD887C-D9F4-890D-82E1-6F106EF7050F}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Luxo\Events">
+      <UniqueIdentifier>{31DD1932-9D92-9227-2687-8CFE923B892B}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Luxo\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Luxo.h" />
     <ClInclude Include="src\Luxo\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Luxo</Filter>
     </ClInclude>
-    <ClInclude Include="src\Luxo.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Luxo\Core.h">
+      <Filter>Luxo</Filter>
     </ClInclude>
     <ClInclude Include="src\Luxo\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Luxo</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Luxo\Events\ApplicationEvent.h">
+      <Filter>Luxo\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Luxo\Events\Event.h">
+      <Filter>Luxo\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Luxo\Events\KeyEvent.h">
+      <Filter>Luxo\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Luxo\Events\MouseEvent.h">
+      <Filter>Luxo\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Luxo\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Luxo</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Luxo\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Luxo</Filter>
     </ClCompile>
     <ClCompile Include="src\Luxo\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Luxo</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
